# ziracle

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/focus_coir/: LICENSE  queries.jsonl
scripts/: run_embed.sh  run_experiments.sh  run_mlflow.sh
src/ziracle/data/: __init__.py  document.py  query.py  ranked_document_list.py
src/ziracle/experiments/: base_experiment.py  baseline.py  query_fusion_weighting_tempered.py
src/ziracle/metrics/: __init__.py  abstract_metric.py  average_precision_metric.py  precision_at_k_metric.py
src/ziracle/model/: blip2_model.py
src/ziracle/processing/: embed_dataset.py
src/ziracle/utils/: batch_iterable.py  dataclass_equal.py
tests/ziracle/experiments/: test_base_experiment.py  test_query_fusion_weighting_tempered.py
tests/ziracle/model/: test_blip2_model.py
